Cadastrar receita avulsa

--- a/templates/index.html
+++ b/templates/index.html
@@ -133,6 +133,9 @@
                         <div class="col-md-4">
                             <a href="{{ url_for('cadastrar_credor') }}" class="btn btn-outline-primary w-100">Cadastrar Credor</a>
                         </div>
+                        <div class="col-md-4">
+                            <a href="{{ url_for('receita_avulsa') }}" class="btn btn-outline-primary w-100">Receita Avulsa</a>
+                        </div>
                     </div>
                 </div>
             </div>
