Adicionado acionistas por usina

--- a/templates/index.html
+++ b/templates/index.html
@@ -204,6 +204,12 @@
                             </a>
                         </div>
 
+                        <div class="col-md-4">
+                            <a href="{{ url_for('cadastrar_participacao_direta') }}" class="btn btn-outline-primary w-100">
+                                Vincular Acionistas às Usinas
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
