Adicionar saldo na Usina

--- a/templates/cadastrar_usina.html
+++ b/templates/cadastrar_usina.html
@@ -25,6 +25,11 @@
                         <input type="number" step="0.01" name="potencia" id="potencia" class="form-control" required>
                     </div>
 
+                    <div class="mb-3">
+                        <label for="saldo_kwh" class="form-label">Saldo Atual (kWh)</label>
+                        <input type="text" class="form-control" id="saldo_kwh" name="saldo_kwh" placeholder="Ex: 1500.75">
+                    </div>
+
                     <div class="col-md-4">
                         <label for="data_ligacao" class="form-label">Data de Ligação:</label>
                         <input type="date" name="data_ligacao" id="data_ligacao" class="form-control" required>
